syntax = "proto3";
package opencopilot;

service Agent {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc GetStatus(AgentStatusRequest) returns (AgentStatus) {}
    rpc GetServiceLogs(GetServiceLogsRequest) returns (stream ServiceLogLine) {}
}

message HealthCheckRequest {
    string service = 1;
  }
  
  message HealthCheckResponse {
    enum ServingStatus {
      UNKNOWN = 0;
      SERVING = 1;
      NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}

message AgentStatusRequest {}

message StopServiceRequest {
    string container_id = 1;
}

message GetServiceLogsRequest {
    string container_id = 1;
}

message ServiceLogLine {
    string line = 1;
}

message AgentStatus {
    string instance_id = 1;
    repeated AgentService services = 2;

    message AgentService {
        string id = 1;
        string image = 2;
    }
}