syntax = "proto3";
package opencopilot;

service OCPAgent {
    rpc GetStatus(StatusRequest) returns (Status) {}
    rpc StartService(StartServiceRequest) returns (Status) {}
    rpc ConfigureService(ConfigureServiceRequest) returns (Status) {}
    rpc StopService(StopServiceRequest) returns (Status) {}
    rpc GetServiceLogs(GetServiceLogsRequest) returns (stream ServiceLogLine) {}

    rpc SetServiceGRPC(SetServiceGRPCRequest) returns (Status) {}
}

message StatusRequest {}

message StartServiceRequest {
    string image_ref = 1;
}

message ConfigureServiceRequest {
    string container_id = 1;
}

message StopServiceRequest {
    string container_id = 1;
}

message SetServiceGRPCRequest {
    string container_id = 1;
    int32 port = 2;
}

message GetServiceLogsRequest {
    string container_id = 1;
}

message ServiceLogLine {
    string line = 1;
}

message Status {
    string agent_id = 1;
    repeated AgentService services = 2;

    message AgentService {
        string id = 1;
        string image = 2;
    }
}